syntax = "proto2";
package protos;

import "easy_rec/python/protos/dnn.proto";

message SENet {
    required uint32 reduction_ratio = 1 [default = 4];
    optional uint32 num_squeeze_group = 2 [default = 2];
    optional bool use_skip_connection = 3 [default = true];
    optional bool use_output_layer_norm = 4 [default = true];
}

message Bilinear {
    required string type = 1 [default = 'interaction'];
    required bool use_plus = 2 [default = true];
    required uint32 output_units = 3;
}

message FiBiNetTower {
    optional Bilinear bilinear = 1;
    required SENet senet = 2;
    optional DNN mlp = 8;
}
