syntax = "proto2";
package protos;

import "easy_rec/python/protos/dnn.proto";

message MaskBlock {
    optional float reduction_factor = 1;
    required uint32 output_size = 2;
    optional uint32 aggregation_size = 3;
    optional bool input_layer_norm = 4 [default = true];
}

message MaskNet {
    repeated MaskBlock mask_blocks = 1;
    required bool use_parallel = 2 [default = true];
    optional DNN mlp = 3;
}
